# setup-bazel

./: .gitignore  action.yml  config.js  index.js  package-lock.json  post.js  r2.js
.github/workflows/: bench-cache.yml  build-r2-sync.yml
rust/bazel-r2-sync/: Cargo.toml
rust/bazel-r2-sync/src/: main.rs  r2.rs  sync.rs  watch.rs
